tests/errors/test_06.xpp
// Incompatible type for this assignment

enum Boolean { TRUE, FALSE }

let x: i8 = false;

fn main() void {
	let x: i8 = false;
	let y: bool = 19;

	let mut z: i32 = 19;
	let z_p: i8* = &z;

    let mut p = &z;
    p *= 3;

    let a: i64 = Boolean::TRUE;
    let b: Boolean = Boolean::FALSE;

	let mut what = [1, 2, 3, 4, 5];
	let v: i8* = what;

	let mut a: bool*;
	a = what;
}
